--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p>A gyakorlati bemutatás a már említett tároló kocsin lévő felszerelt hajóval történjen. A tanítás során mindig térjünk ki a szél irányának és a haladási iránynak a viszonyára, valamint a vitorla beállítására is (pl.: hátszél: hátulról fúj a szél, teljesen kiengedem a vitorlát).</p>
 <img src="forrás/szelirany.JPG" alt="szélirány">
 
-<h3>Csomó fajták</h3>
+Csomó fajták
 
 
     Alap csomók
